k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supermarket-api
  labels:
    app: supermarket-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: supermarket-api
  template:
    metadata:
      labels:
        app: supermarket-api
    spec:
      containers:
        - name: api
          image: DOCKER_HUB_USERNAME/supermarket-api:latest # replaced in CI
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: data
          emptyDir: {}
